# mediasoft-httpservice

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: internal-check.yml
mediasoft/: asgi.py  settings.py  urls.py  wsgi.py
mediasoft/httpservice/: admin.py  apps.py  filters.py  models.py  serializers.py  utils.py  views.py
mediasoft/httpservice/fixtures/: initial_data.json
mediasoft/httpservice/migrations/: 0001_initial.py  0001_squashed_0006_shop_street_alter_shop_city.py  0002_alter_city_options_alter_shop_options_and_more.py  0003_alter_shop_city_alter_shop_street.py  0004_remove_shop_city_remove_shop_street.py  0005_shop_city.py  0006_shop_street_alter_shop_city.py  0007_alter_shop_street.py
mediasoft/tests/: factories.py  test_city.py  test_shop.py  test_street.py
mediasoft/tests/fixtures/: bad_shop_json1.json  bad_shop_json2.json  bad_shop_json3.json  bad_shop_json4.json  bad_shop_json5.json
